@@ -3,6 +3,7 @@ Changes in version 0.7-1 (2016-03-25)
 	 * startPlot: stopped suppressing arguments for spar that are not in par
 	 * survReport: added opts argument, mylim argument
 	 * survReport: reduced font size of ylab when long, added markevent argument
+	 * accrualReport: added studynos argument
 
 Changes in version 0.7-0 (2015-12-02)
 	 * survReport: plot cumulative incidence estimates when left hand side of formula contains Surv objects for competing risks
